--- a/client/src/css/Timeline.css
+++ b/client/src/css/Timeline.css
@@ -10,7 +10,8 @@
     background-color: #fcfcfc;
     position: absolute;
     left: calc(50% - 2px);
-    width: 3px;
+    border-radius: 1em;
+    width: 2px;
     height: 100%;
 } 
 
