--- a/client/src/css/TimelineItem.css
+++ b/client/src/css/TimelineItem.css
@@ -15,7 +15,7 @@
 }
 
 .timelineItem .content {
-    max-width: 80%;
+    max-width: 65%;
     padding: 1em;
     border: 1px solid #dcdcdc;
     background: black;
